# CPPML

./: CMakeLists.txt
MachineLearning/LinearRegression/: LinearRegression.cpp  LinearRegressionClass.h
